--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 server.port=9010
+#文件存储路径
 repository=repository
+#单个文件大小(MB)
 spring.servlet.multipart.max-file-size=10240MB
+#总上传的数据大小(MB)
+spring.servlet.multipart.max-request-size=10240MB
